--- a/styles/styles.css
+++ b/styles/styles.css
@@ -677,12 +677,116 @@
 }
 
 .subscription__input::placeholder {
-  font-family: inherit;
-  font-size: 17px;
+  font-family: 'Inter';
+  font-size: 16px;
   line-height: 20px;
   color: #B9B9B9;
 }
 
 .subscription__button {
+  padding: 12px 34px;
+}
+
+/* Стили для блока dilivery */
+.dilivery {
+  width: 1170px;
+  margin: 0 auto;
+  margin-bottom: 80px;
+  padding: 64px 64px 64px 100px;
+  box-sizing: border-box;
+  background-image: url(../images/dilivery-background.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.dilivery__text-container {
+  max-width: 371px;
+}
+
+.dilivery__title {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 46px;
+}
+
+.dilivery__text {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+/* Стили для формы доставки */
+.dilivery__form {
+  width: 500px;
+  box-sizing: border-box;
+  padding: 40px 40px 42px 40px;
+  background-color: #FCFCFC;
+  border-radius: 8px;
+  box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
+}
+
+.dilivery__form-text {
+  max-width: 380px;
+  margin-top: 0;
+  margin-bottom: 32px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.dilivery__data, .dilivery__telefone, .dilivery__address {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.dilivery__address {
+  margin-bottom: 32px;
+}
+
+.dilivery__label {
+  margin-bottom: 9px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.dilivery__data-input, .dilivey__telefone-input, .dilivery__address-input {
+  padding: 16px 0 15px 16px;
+  box-sizing: border-box;
+  border: none;
+  outline: 1px solid #B9B9B9;
+  border-radius: 4px;
+}
+
+.dilivery__data-input {
+  width: 117px;
+}
+
+.dilivey__telefone-input {
+  width: 287px;
+}
+
+.dilivery__data-input::placeholder, .dilivey__telefone-input::placeholder, .dilivery__address-input::placeholder {
+  color: #B9B9B9;
+  font-family: 'Inter';
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.dilivery__inputs-container {
+  margin-bottom: 21px;
+  display: flex;
+  gap: 16px;
+}
+
+.dilivery__button {
+  margin: 0 auto;
   padding: 12px 34px;
 }
