--- a/styles/styles.css
+++ b/styles/styles.css
@@ -702,7 +702,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 }
 
 .dilivery__text-container {
@@ -710,7 +710,7 @@
 }
 
 .dilivery__title {
-  margin-top: 0;
+  margin-top: 5px;
   margin-bottom: 24px;
   font-weight: 900;
   font-size: 32px;
@@ -718,6 +718,7 @@
 }
 
 .dilivery__text {
+  margin: 0;
   font-size: 16px;
   line-height: 22px;
 }
@@ -730,6 +731,8 @@
   background-color: #FCFCFC;
   border-radius: 8px;
   box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
+  display: flex;
+  flex-direction: column;
 }
 
 .dilivery__form-text {
@@ -747,7 +750,7 @@
 }
 
 .dilivery__address {
-  margin-bottom: 32px;
+  margin-bottom: 33px;
 }
 
 .dilivery__label {
@@ -788,5 +791,5 @@
 
 .dilivery__button {
   margin: 0 auto;
-  padding: 12px 34px;
+  padding: 13px 32px 11px 33px;
 }
