--- a/styles/styles.css
+++ b/styles/styles.css
@@ -587,7 +587,7 @@
   min-height: 224px;
   padding: 32px;
   border-radius: 16px;
-  background-image: url(../images/article-background.png);
+  background-image: url(../images/article-background.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -694,7 +694,7 @@
   margin-bottom: 80px;
   padding: 64px 64px 64px 100px;
   box-sizing: border-box;
-  background-image: url(../images/dilivery-background.png);
+  background-image: url(../images/dilivery-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -727,7 +727,7 @@
 .dilivery__form {
   width: 500px;
   box-sizing: border-box;
-  padding: 40px 40px 42px 40px;
+  padding: 40px 40px 41px 40px;
   background-color: #FCFCFC;
   border-radius: 8px;
   box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
@@ -792,4 +792,221 @@
 .dilivery__button {
   margin: 0 auto;
   padding: 13px 32px 11px 33px;
+}
+
+/* Стили для блока с информацией о магазине */
+.information {
+  width: 1170px;
+  margin: 0 auto;
+  margin-bottom: 42px;
+  padding: 64px;
+  box-sizing: border-box;
+  background-image: url(../images/information-background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 16px;
+  display: flex;
+}
+
+.information__cotainer {
+  padding: 40px 43px 42px 40px;
+  background-color: #FCFCFC;
+  box-sizing: border-box;
+  box-shadow: 0 8px 16px rgba(45, 52, 64, 0.12);
+  border-radius: 8px;
+}
+
+.infomation__list {
+  margin: 0;
+}
+
+.information__text {
+  max-width: 203px;
+  margin-bottom: 12px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #565C66;
+}
+
+.information__description {
+  max-width: 263px;
+  margin-left: 0;
+  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.information__description:nth-of-type(2) {
+  margin-bottom: 0;
+}
+
+.information__telefone {
+  max-width: 263px;
+  color: inherit;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.information__telefone:hover {
+  opacity: 0.7;
+}
+
+.information__telefone:active {
+  opacity: 0.5;
+}
+
+.information__telefone:focus {
+  outline: 2px solid #2D3440;
+}
+
+.information__schedule {
+  margin-left: 0;
+  margin-bottom: 32px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #565C66;
+}
+
+.information__button {
+  padding: 12px 34px 12px 33px;
+}
+
+/* Стили для иконок социальных сетей */
+.socnetworks {
+  max-width: 108px;
+  margin: 0;
+  margin-left: 2px;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.socnetworks-link {
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+}
+
+.socnetworks-item {
+  margin-right: 12px;
+}
+
+.socnetworks-item:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+/* Стили для footer */
+.footer {
+  width: 1170px;
+  margin: 0 auto;
+  margin-bottom: 41px;
+  display: flex;
+}
+
+.footer__navigation {
+  margin-top: 2px;
+  margin-left: 320px;
+  margin-right: 200px;
+}
+
+.footer__navigation-list {
+  width: 332px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(min-content, max-content));
+  column-gap: 24px;
+  row-gap: 8px;
+}
+
+.footer__navigation-link {
+  text-decoration: none;
+  color: inherit;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.footer__navigation-link:hover {
+  opacity: 0.7;
+}
+
+.footer__navigation-link:active {
+  opacity: 0.5;
+}
+
+.footer__navigation-link:focus {
+  outline: 2px solid #2D3440;
+}
+
+.footer__navigation-link_suppliers {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  position: relative;
+}
+
+.footer__navigation-link_suppliers::before {
+  content: '';
+  width: 16px;
+  height: 16px;
+  background-image: url(../images/footer-heart-icon.svg);
+  position: absolute;
+  top: 0;
+  left: -23px;
+}
+
+.footer__copyright-container {
+  max-width: 195px;
+}
+
+.footer__copyright-logo-link {
+  display: inline-block;
+  margin-top: 2px;
+  margin-left: 1px;
+}
+
+.footer__copyright-logo-link:hover {
+  opacity: 0.7;
+}
+
+.footer__copyright-logo-link:active {
+  opacity: 0.5;
+}
+
+.footer__copyright-logo-link:focus {
+  outline: 2px solid #2D3440;
+}
+
+.footer__copyright-text {
+  display: block;
+  margin: 0;
+  margin-top: 10px;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.footer__copyright-link {
+  color: inherit;
+  text-decoration: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.footer__copyright-link:hover {
+  opacity: 0.7;
+}
+
+.footer__copyright-link:active {
+  opacity: 0.5;
+}
+
+.footer__copyright-link:focus {
+  outline: 2px solid #2D3440;
 }
