--- a/styles/styles.css
+++ b/styles/styles.css
@@ -254,6 +254,74 @@
   fill: #FCFCFC;
 }
 
+/* Стили слайдера */
+.slider__container {
+  width: 1170px;
+  margin: 0 auto;
+}
+
+.slider {
+  margin: 0;
+  padding-left: 70px;
+  list-style-type: none;
+}
+
+.slider__item {
+  display: flex;
+}
+
+.slider__left {
+  max-width: 470px;
+  margin-top: 143px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.slider__title {
+  margin: 0;
+  margin-bottom: 24px;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 46px;
+}
+
+.slider__description {
+  margin: 0;
+  margin-bottom: 48px;
+  max-width: 410px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.slider__button-order {
+  padding: 12px 33px 12px 36px;
+  display: inline-block;
+  background-color: #FCFCFC;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 26px;
+  box-shadow: 0 0 0 4px rgba(252, 252, 252, 0.4), 0 4px 12px rgba(45, 52, 64, 0.1);
+  cursor: pointer;
+}
+
+.slider__button-order:hover {
+  background-color: rgba(252, 252, 252, 0.4);
+  box-shadow: 0 0 0 4px #FCFCFC;
+}
+
+.slider__button-order:active {
+  box-shadow: 0 0 0 2px #2D3440;
+}
+
+.slider__button-order:focus {
+  background-color: rgba(252, 252, 252, 0.5);
+  box-shadow: 0 0 0 2px #2D3440;
+}
+
 /* Стили для presents */
 .presents {
   width: 1170px;
@@ -877,7 +945,7 @@
   padding: 12px 34px 12px 33px;
 }
 
-/* Стили для иконок социальных сетей */
+/* Стили для иконок социальных сетей ПОПРАВИТЬ */
 .socnetworks {
   max-width: 108px;
   margin: 0;
@@ -888,16 +956,23 @@
   flex-wrap: wrap;
 }
 
-.socnetworks-icon {
-  fill: #FCFCFC;
-}
-
 .socnetworks-link {
-
+  display: inline-block;
+  width: 28px;
+  height: 28px;
 }
 
-.socnetworks-link:hover {
-  background-color: #2D3440;
+.socnetworks-icon {
+  color: none;
+}
+
+.socnetworks-path {
+  color: #FCFCFC;
+}
+
+.socnetworks-rect {
+  color: #FCFCFC;
+  opacity: 0.3;
 }
 
 .socnetworks-item {
