--- a/styles/styles.css
+++ b/styles/styles.css
@@ -322,6 +322,33 @@
   box-shadow: 0 0 0 2px #2D3440;
 }
 
+.slider__button {
+  width: 38px;
+  height: 38px;
+  background-color: rgba(252, 252, 252, 0.3);
+  box-sizing: border-box;
+  border: 2px solid #FCFCFC;
+  border-radius: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider__image-main {
+  position: relative;
+}
+
+.button_scroll-right {
+  transform: rotate(180deg);
+  position: absolute;
+  top: 50%;
+  right: 0;
+}
+
+.button_scroll-left {
+  position: absolute;
+}
+
 /* Стили для presents */
 .presents {
   width: 1170px;
@@ -945,7 +972,7 @@
   padding: 12px 34px 12px 33px;
 }
 
-/* Стили для иконок социальных сетей ПОПРАВИТЬ */
+/* Стили для иконок социальных сетей */
 .socnetworks {
   max-width: 108px;
   margin: 0;
@@ -956,31 +983,45 @@
   flex-wrap: wrap;
 }
 
-.socnetworks-link {
-  display: inline-block;
-  width: 28px;
-  height: 28px;
-}
-
-.socnetworks-icon {
-  color: none;
-}
-
-.socnetworks-path {
-  color: #FCFCFC;
-}
-
-.socnetworks-rect {
-  color: #FCFCFC;
-  opacity: 0.3;
-}
-
 .socnetworks-item {
   margin-right: 12px;
 }
 
 .socnetworks-item:nth-of-type(3n) {
   margin-right: 0;
+}
+
+.socnetworks-link {
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  outline: none;
+}
+
+.socnetworks-rect {
+  color: #FCFCFC;
+}
+
+.socnetworks-path {
+  color: #FCFCFC;
+}
+
+/* Стили для разных состояний иконок ПОПРАВИТЬ*/
+.socnetworks-link:hover .socnetworks-rect {
+  color: #FCFCFC;
+}
+
+.socnetworks-link:hover {
+  background-color: #2D3440;
+}
+
+.socnetworks-link:focus {
+  background-color: #2D3440;
+}
+
+.socnetworks-link:focus .socnetworks-rect {
+  color: #2D3440;
 }
 
 /* Стили для footer */
