--- a/styles/styles.css
+++ b/styles/styles.css
@@ -378,6 +378,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  outline: none;
 }
 
 .button_scroll-right {
@@ -392,6 +393,31 @@
   top: 50%;
   left: -18px;
   transform: translateY(-50%);
+}
+
+.slider__button-scroll:hover {
+  background-color: #FCFCFC;
+}
+
+.slider__button-scroll:hover path {
+  fill: #2D3440;
+}
+
+.slider__button-scroll:active {
+  background-color: rgba(252, 252, 252, 0.5);
+  border: none;
+}
+
+.slider__button-scroll:active path {
+  fill: #2D3440;
+}
+
+.slider__button-scroll:focus {
+  border: 2px solid #2D3440;
+}
+
+.slider__button-scroll:focus path {
+  fill: #2D3440;
 }
 
 /* Состояния для кнопки "Заказать" */
@@ -421,6 +447,7 @@
 .slider__button-order:focus {
   background-color: rgba(252, 252, 252, 0.5);
   box-shadow: 0 0 0 2px #2D3440;
+  outline: none;
 }
 
 /* Стили для пагинации */
@@ -443,13 +470,40 @@
   opacity: 0.3;
   border-radius: 50%;
   cursor: pointer;
+  outline: none;
+}
+
+.slider__button-dot:hover {
+  background-color: rgba(252, 252, 252, 0.3);
+  border: 1px solid #FCFCFC;
+  opacity: 1;
+}
+
+.slider__button-dot:active {
+  opacity: 0.5;
+}
+
+.slider__button-dot:focus {
+  background-color: rgba(252, 252, 252, 0.3);
+  border: 1px solid #2D3440;
+  opacity: 1;
 }
 
 .slider__button-active {
   background-color: #FCFCFC;
   border: 1px solid #FCFCFC;
   opacity: 1;
+}
 
+.slider__button-active:hover {
+  background-color: #FCFCFC;
+  border: 1px solid #FCFCFC;
+  opacity: 0.7;
+}
+
+.slider__button-active:focus {
+  background-color: #FCFCFC;
+  border: 1px solid #2D3440;
 }
 
 /* Стили для presents */
@@ -1261,7 +1315,22 @@
   left: 2px;
 }
 
+.header__submenu::after {
+  content: '';
+  width: 100%;
+  height: 10px;
+  background-color: none;
+  position: absolute;
+  bottom: 100%;
+}
+
 .header__navigation-catalog:hover .header__submenu {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.header__navigation-catalog:focus-within .header__submenu {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -1315,4 +1384,70 @@
   background-color: #FF4A78;
   color: #FCFCFC;
   outline: none;
+}
+
+/* Стили для поля ввода для поиска по сайту */
+.header__user-navigation-item {
+  position: relative;
+}
+
+.search-input__form {
+  width: 356px;
+  height: 96px;
+  position: absolute;
+  left: -325px;
+  top: 40px;
+  background-color: #FCFCFC;
+  filter: drop-shadow(0 8px 16px rgba(45, 52, 64, 0.12));
+  border-radius: 4px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.search-input__form::after {
+  content: '';
+  width: 100%;
+  height: 10px;
+  background-color: none;
+  position: absolute;
+  bottom: 100%;
+}
+
+.header__user-navigation-item:hover .search-input__form {
+  display: flex;
+}
+
+.header__user-navigation-item:focus-within .header__user-navigation-link {
+  background-color: #FF4A78;
+}
+
+.header__user-navigation-item:focus-within path {
+  fill: #FCFCFC;
+}
+
+.header__user-navigation-item:hover .header__user-navigation-link {
+  background-color: #FF4A78;
+}
+
+.header__user-navigation-item:hover path {
+  fill: #FCFCFC;
+}
+
+.search-input {
+  width: 324px;
+  padding: 12px 0 13px 16px;
+  box-sizing: border-box;
+  border: 1px solid #B9B9B9;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.search-input::placeholder {
+  font-size: 16px;
+  line-height: 20px;
+  color: #B9B9B9;
 }
