--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1291,25 +1291,22 @@
 }
 
 /* Стили для выпадающего меню НЕ РАБОТАЕТ НАДО ПОПРАВИТЬ*/
-.header__navigation-catalog:focus-within .header__navigation-link {
-  background-color: #FF4A78;
-  color: #FCFCFC;
-}
-
-.header__navigation-catalog:hover {
+.header__navigation-catalog {
   position: relative;
 }
 
 .header__submenu {
   width: 135px;
   margin: 0;
-  padding: 16px 0 9px 0;
+  padding: 12px 0 9px 0;
   box-sizing: border-box;
   background-color: #FCFCFC;
   box-shadow: 0 8px 16px rgba(45, 52, 64, 0.12);
   border-radius: 4px;
   list-style-type: none;
   display: none;
+  flex-wrap: wrap;
+  flex-direction: column;
   position: absolute;
   top: 36px;
   left: 2px;
@@ -1336,6 +1333,16 @@
   flex-direction: column;
 }
 
+.header__navigation-catalog:hover .header__navigation-link {
+  color: #FCFCFC;
+  background-color: #FF4A78;
+}
+
+.header__navigation-catalog:focus-within .header__navigation-link {
+  color: #FCFCFC;
+  background-color: #FF4A78;
+}
+
 .header__submenu-item {
   margin-bottom: 4px;
 }
@@ -1344,22 +1351,21 @@
   margin-bottom: 0;
 }
 
-.header__submenu-title {
-  margin-bottom: 19px;
-  padding: 0 12px 0 16px;
+.header__submenu-item_new {
+  margin-bottom: 14px;
   font-weight: 700;
   font-size: 14px;
   line-height: 20px;
   position: relative;
 }
 
-.header__submenu-title::after {
+.header__submenu-item_new::after {
   content: '';
   width: 103px;
   height: 1px;
   background-color: #B9B9B9;
   position: absolute;
-  top: 31px;
+  top: 35px;
   left: 16px;
 }
 
@@ -1708,4 +1714,98 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 22px;
+}
+
+/* Стили для модального окна обратной связи */
+.popup {
+  background-color: rgba(45, 52, 64, 0.3);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+.popup_opened {
+  display: flex;
+}
+
+.popup__container {
+  max-width: 570px;
+  padding: 64px 64px 65px 64px;
+  background: #FCFCFC;
+  box-sizing: border-box;
+  box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
+  border-radius: 8px;
+  position: relative;
+}
+
+.popup__button_close {
+  width: 12px;
+  height: 12px;
+  background-image: url(../images/basket-close-button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 36px;
+  right: 36px;
+}
+
+.popup__button_close:hover {
+  opacity: 0.7;
+}
+
+.popup__button_close:active {
+  opacity: 0.5;
+}
+
+.popup__button_close:focus {
+  outline: 2px solid #2D3440;
+}
+
+.popup__title {
+  max-width: 442px;
+  margin-top: 0;
+  margin-bottom: 32px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.popup__form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.popup__input {
+  width: 442px;
+  margin-bottom: 16px;
+  padding: 14px 0 12px 16px;
+  box-sizing: border-box;
+  border: 1px solid #B9B9B9;
+  border-radius: 4px;
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.popup__input::placeholder {
+  color: #B9B9B9;
+}
+
+.popup__input_message {
+  margin-bottom: 33px;
+}
+
+.popup__button_send {
+  padding: 12px 32px;
 }
