--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1046,6 +1046,67 @@
   padding: 13px 32px 11px 33px;
 }
 
+/* Стили для tooltip */
+.dilivery__tooltip-container {
+  display: flex;
+}
+
+.dilivery__tooltip {
+  position: relative;
+}
+
+.dilivery__tooltip-button {
+  width: 14px;
+  height: 14px;
+  margin-left: 4px;
+  background-image: url(../images/tooltip-button.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+.dilivery__tooltip-text {
+  min-width: 165px;
+  padding: 10px 8px 8px 8px;
+  position: absolute;
+  top: -10px;
+  left: 27px;
+  display: none;
+  background-color: #FCFCFC;
+  box-sizing: border-box;
+  border: 1px solid #B9B9B9;
+  box-shadow: 0 2px 12px rgba(173, 152, 143, 0.18);
+  border-radius: 1px;
+  font-size: 12px;
+  line-height: 16px;
+  color: #565C66;
+}
+
+.dilivery__tooltip-text::before {
+  content: '';
+  position: absolute;
+  top: 9px;
+  right: 100%;
+  border: 9px solid transparent;
+  border-right: 9px solid #B9B9B9;
+}
+
+.dilivery__tooltip-text::after {
+  content: '';
+  position: absolute;
+  top: 10px;
+  right: 100%;
+  border: 8px solid transparent;
+  border-right: 8px solid #FCFCFC;
+}
+
+.dilivery__tooltip:hover .dilivery__tooltip-text {
+  display: block;
+}
+
 /* Стили для блока с информацией о магазине */
 .information {
   width: 1170px;
