--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1053,6 +1053,7 @@
 
 .dilivery__tooltip {
   position: relative;
+  cursor: pointer;
 }
 
 .dilivery__tooltip-button {
@@ -1869,4 +1870,59 @@
 
 .popup__button_send {
   padding: 12px 32px;
+}
+
+/* СТИЛИ ДЛЯ СТРАНИЦЫ КАТАЛОГА */
+.content {
+  width: 1170px;
+  margin: 0 auto;
+}
+
+.breadcrumbs__list {
+  margin-top: 39px;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.breadcrumbs__link {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.breadcrumbs__item {
+  margin-right: 28px;
+  position: relative;
+}
+
+.breadcrumbs__item:not(:last-of-type):after {
+  content: '';
+  width: 12px;
+  height: 12px;
+  background-image: url(../images/breadcrumbs-chevrons.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 5px;
+  right: -20px;
+}
+
+.breadcrumbs__item:last-of-type {
+  margin-right: 0;
+}
+
+.breadcrumbs__link_active {
+  border-bottom: 2px solid #2D3440;
+}
+
+.page__title {
+  margin-top: 15px;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 46px;
 }
